# dragon_os

./: .gitignore  Cargo.toml  README.md  build.ps1  build_boot_loader.ps1  mount.ps1  put_files.ps1  rust-toolchain  rust_target_dragon.json  x86_64_dragon-uefi.json
kernel/: Cargo.toml  rust-toolchain.toml  rust_target_dragon_kernel.json
kernel/.cargo/: config.toml
kernel/src/: frame_buffer_config.rs  main.rs
kernel/src/font/: font.rs  font_writer.rs  mod.rs
kernel/src/interrupt/: interrupt_descriptor.rs  interrupt_descriptor_type.rs  interrupt_vector.rs  mod.rs
kernel/src/iter_str/: mod.rs  unsigned_integer.rs
kernel/src/memory_manager/: mod.rs  slab_allocator.rs
kernel/src/paging/: mod.rs  page_size.rs
kernel/src/pci/: local_apic.rs  mod.rs  msi_delivery_mode.rs  msi_trigger_mode.rs  pci_capability_id.rs
kernel/src/pci/xhci/: command_ring.rs  context.rs  endpoint_type.rs  event_ring.rs  mod.rs  port.rs  port_phase.rs  port_speed.rs  port_status.rs  software_ring.rs  transfer_request_block.rs
kernel/src/pci/xhci/transfer_request_block/: mod.rs
kernel/src/pci/xhci/transfer_request_block/typed_transfer_request_block/: address_device_command_trb.rs  command_completion_event_trb.rs  disable_slot_command_trb.rs  enable_slot_command_trb.rs  link_trb.rs  mod.rs  (+3 more)
kernel/src/pci/xhci/usb/: device.rs
kernel/src/pixel_writer/: draw_rect.rs  mod.rs  pixel_color.rs
kernel/src/pointer/: mod.rs
kernel/src/segment/: descriptor_type.rs  mod.rs  segment_descriptor.rs
kernel/src/services/: mod.rs
kernel/src/util/: mod.rs  queue.rs  vector2.rs
src/: main.rs  (+1 more)
(+168 files in other folders)
