[package]
name = "dragon_os_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = false
strip = true
